use helix vertical template as a base index.html file. Various other fixes including making things work correctly in IE11

--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,13 @@ hx-panel {
   border: 1px solid #aaa
 }
 
+/* required for the grid to work properly */
+main {
+  width: 100%;
+}
+
 .align-right {
   text-align: right;
 }
+
+
